E3-2554: Added E3 and JSTL taglibs to IntelliJ project

--- a/ivy.xml
+++ b/ivy.xml
@@ -39,6 +39,7 @@
         <dependency org="javax.ejb" name="javax.ejb-api" rev="3.2.2" conf="sources->sources" />
         <dependency org="javax.enterprise" name="cdi-api" rev="2.0.SP1" conf="sources->sources" />
         <dependency org="javax.servlet" name="javax.servlet-api" rev="3.1.0" conf="sources->sources" />
+        <dependency org="javax.servlet" name="jstl" rev="1.2" conf="sources->sources" />
         <dependency org="javax.websocket" name="javax.websocket-api" rev="1.1" conf="sources->sources" />
         <dependency org="javax.validation" name="validation-api" rev="2.0.1.Final" conf="sources->sources" />
         <dependency org="jdom" name="jdom" rev="1.0" conf="sources->sources" />
@@ -120,6 +121,7 @@
         <dependency org="javax.ejb" name="javax.ejb-api" rev="3.2.2" conf="javadoc->javadoc" />
         <dependency org="javax.enterprise" name="cdi-api" rev="2.0.SP1" conf="javadoc->javadoc" />
         <dependency org="javax.servlet" name="javax.servlet-api" rev="3.1.0" conf="javadoc->javadoc" />
+        <dependency org="javax.servlet" name="jstl" rev="1.2" conf="javadoc->javadoc" />
         <dependency org="javax.validation" name="validation-api" rev="2.0.1.Final" conf="javadoc->javadoc" />
         <dependency org="javax.websocket" name="javax.websocket-api" rev="1.1" conf="javadoc->javadoc" />
         <dependency org="jdom" name="jdom" rev="1.0" conf="javadoc->javadoc" />
@@ -203,6 +205,7 @@
         <dependency org="javax.ejb" name="javax.ejb-api" rev="3.2.2" conf="binaries->default" />
         <dependency org="javax.enterprise" name="cdi-api" rev="2.0.SP1" conf="binaries->default" />
         <dependency org="javax.servlet" name="javax.servlet-api" rev="3.1.0" conf="binaries->default" />
+        <dependency org="javax.servlet" name="jstl" rev="1.2" conf="binaries->default" />
         <dependency org="javax.validation" name="validation-api" rev="2.0.1.Final" conf="binaries->default" />
         <dependency org="javax.websocket" name="javax.websocket-api" rev="1.1" conf="binaries->default" />
         <dependency org="jdom" name="jdom" rev="1.0" conf="binaries->default" />
