E3-2554: Updated basic page framing

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -811,6 +811,9 @@ pageTitle.contentWebAddresses=Web Addresses
 pageTitle.country=Review ({0})
 pageTitle.countries=Countries
 pageTitle.countryDescriptions=Country Descriptions
+pageTitle.customers=Customers
+pageTitle.customerResults=Customer Results
+pageTitle.customer=Review ({0})
 pageTitle.customerDocument=Review ({0})
 pageTitle.customerDocumentDescriptions=Customer Document Descriptions
 pageTitle.customerDocuments=Customer Documents
