E3-2554: Navigation updated for Customer review page

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -1071,6 +1071,7 @@ navigation.customerCarrierAccounts=Carrier Accounts
 navigation.customerDocument=Review ({0})
 navigation.customerDocuments=Documents
 navigation.customerDocumentDescriptions=Descriptions
+navigation.customer=Review ({0})
 navigation.customers=Customers
 navigation.customerTypeContactListGroups=Customer Types
 navigation.customerTypeContactLists=Customer Types
