E3-2556: Switched to using io.cucumber.core.cli.Main

--- a/test/cucumber/build.xml
+++ b/test/cucumber/build.xml
@@ -69,7 +69,7 @@
         <mkdir dir="${test.cucumber.results.html.dir}" />
         <mkdir dir="${test.cucumber.results.junit.dir}" />
         
-        <java classname="cucumber.api.cli.Main" fork="true" failonerror="false" resultproperty="cucumber.exitstatus">
+        <java classname="io.cucumber.core.cli.Main" fork="true" failonerror="false" resultproperty="cucumber.exitstatus">
             <classpath>
                 <pathelement path="${metadata.dir}" />
                 <pathelement location="./build/classes"/>
