--- a/ui/web/cms/build.xml
+++ b/ui/web/cms/build.xml
@@ -129,6 +129,10 @@
             <lib dir="${build.lib.dir}">
                 <include name="classgraph.jar"/>
             </lib>
+            <!-- ICU4J -->
+            <lib dir="${build.lib.dir}">
+                <include name="icu4j.jar"/>
+            </lib>
             <!-- Struts -->
             <lib dir="${build.lib.dir}">
                 <include name="commons-beanutils.jar"/>
