#70: Added Default Term and Default Free On Board when creating and editing Vendor Types

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -162,6 +162,7 @@ label.customerTypeName=Customer Type Name
 label.customerSequence=Customer Sequence
 label.defaultSource=Default Source
 label.defaultTerm=Default Term
+label.defaultFreeOnBoard=Default Free On Board
 label.defaultCustomerStatus=Default Customer Status
 label.defaultCustomerCreditStatus=Default Customer Credit Status
 label.offerNameElementName=Offer Name Element Name
