--- a/service/job/build.xml
+++ b/service/job/build.xml
@@ -40,6 +40,7 @@
             <pathelement location="${build.dir.lib}/error_prone_core-with-dependencies.jar"/>
             <pathelement location="${build.dir.lib}/failureaccess.jar"/>
             <pathelement location="${build.dir.lib}/jFormatString.jar"/>
+            <pathelement location="${build.dir.lib}/threeten-extra.jar"/>
         </path>
         <javac
             debug="on"
