#245: Added .map files for Bootstrap to deployed .war

--- a/ui/web/main/build.xml
+++ b/ui/web/main/build.xml
@@ -194,9 +194,11 @@
             <!-- Bootstrap -->
             <fileset dir="${lib.dir}/bootstrap/css">
                 <include name="bootstrap.min.css" />
+                <include name="bootstrap.min.css.map" />
             </fileset>
             <fileset dir="${lib.dir}/bootstrap/js">
                 <include name="bootstrap.min.js" />
+                <include name="bootstrap.min.js.map" />
             </fileset>
         </war>
     </target>
