#247: Added .map files for Popper to deployed .war

--- a/ui/web/main/build.xml
+++ b/ui/web/main/build.xml
@@ -190,6 +190,7 @@
             <!-- Popper.js -->
             <fileset dir="${lib.dir}/popper/dist/umd">
                 <include name="popper.min.js" />
+                <include name="popper.min.js.map" />
             </fileset>
             <!-- Bootstrap -->
             <fileset dir="${lib.dir}/bootstrap/css">
